# entropy

./: .gitignore  BENCHMARKS.md  BIB.md  Cargo.toml  PEERREVIEW.md  R-REPORT.md  README.md  RESPONSE.md  TESTS.md  USAGE.md  ullSchema
pubs/: diehard-tests.txt  dieharder-tests.txt
scripts/: bench_rngs.sh  make_radar.py  parse_battery.py  r_gap_test_diagnostic.R  r_report_analysis.py  r_report_summary.py  r_rng_tests.R  run_r_report.sh
src/: bench_rngs.rs  lib.rs  main.rs  math.rs  result.rs  seed.rs
src/diehard/: binary_rank.rs  birthday_spacings.rs  bitstream.rs  count_ones.rs  craps.rs  minimum_distance.rs  mod.rs  monkey.rs  operm5.rs  overlapping_sums.rs  parking_lot.rs  runs_float.rs  spheres_3d.rs  squeeze.rs
src/dieharder/: bit_distribution.rs  byte_distribution.rs  dct.rs  fill_tree.rs  gcd.rs  ks_uniform.rs  lagged_sums.rs  minimum_distance_nd.rs  mod.rs  monobit2.rs  permutations.rs
src/nist/: approximate_entropy.rs  block_frequency.rs  cumulative_sums.rs  frequency.rs  linear_complexity.rs  longest_run.rs  matrix_rank.rs  mod.rs  non_overlapping_template.rs  overlapping_template.rs  random_excursions.rs  random_excursions_variant.rs  runs.rs  serial.rs  spectral.rs  universal.rs
src/research/: approx_entropy.rs  knuth.rs  marsaglia_tsang.rs  mod.rs  pincus.rs  practrand_fpf.rs  testu01_hamming.rs  testu01_lz.rs  webster_tavares.rs
src/rng/: aes_ctr.rs  bad.rs  block_ctr.rs  blum_blum_shub.rs  blum_micali.rs  c_stdlib.rs  chacha20_rng.rs  crypto_cprng.rs  dual_ec.rs  hash_drbg.rs  hmac_drbg.rs  lcg.rs  mod.rs  mt19937.rs  os.rs  pcg.rs  primes.rs  sfc.rs  (+6 more)
stats/: aes_ctr.bench  ansi_c_lcg.bench  bbs.bench  blum_micali.bench  bsd_rand_compat.bench  bsd_random.bench  chacha20.bench  constant.bench  counter.bench  crand.bench  crypto_ctr_drbg.bench  hash_drbg.bench  hmac_drbg.bench  jsf64.bench  lcg_glibc.bench  lcg_minstd.bench  linux_glibc_random.bench  mt19937.bench  osrng.bench  pcg32.bench  pcg64.bench  rand48.bench  sfc64.bench  spongebob.bench  squidward.bench  sysv_rand.bench  windows_dotnet_random.bench  windows_msvc_rand.bench  windows_vb6_rnd.bench  wyrand.bench  xoroshiro128ss.bench  xorshift32.bench  xorshift64.bench  xoshiro256ss.bench
tests/: build_radar_svg.py  dump_rng.rs  run_all.sh  run_aux.sh  run_battery.sh  run_benchmarks.sh
(+132 files in other folders)
