[package]
name        = "entropy"
version     = "0.1.0"
edition     = "2021"
description = "A pure-Rust statistical test suite for pseudorandom number generators (NIST SP 800-22, DIEHARD, DIEHARDER)"
license     = "MIT"
default-run = "run_tests"

[[bin]]
name = "run_tests"
path = "src/main.rs"

[[bin]]
name = "bench_rngs"
path = "src/bench_rngs.rs"

[lib]
name = "entropy"
path = "src/lib.rs"

[dependencies]
cryptography = { path = "../cryptography" }
rustfft = "6.2"
