[package]
name        = "entropy"
version     = "0.1.0"
edition     = "2021"
description = "A pure-Rust statistical test suite for pseudorandom number generators (NIST SP 800-22, DIEHARD, DIEHARDER)"
license     = "BSD-2-Clause"
default-run = "run_tests"

[[bin]]
name = "run_tests"
path = "src/main.rs"

[[bin]]
name = "bench_rngs"
path = "src/bench_rngs.rs"

[lib]
name = "entropy"
path = "src/lib.rs"

[dependencies]
cryptography  = { path = "../cryptography" }
rustfft       = "6.2"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-alt   = { path = "../cryptography/fast/Apple-Silicon/aarch64-alt" }

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
x86-alt       = { path = "../cryptography/fast/x86/x86-alt" }
