[package]
name        = "entropy-rs"
version     = "0.5.0"
edition     = "2021"
description = "A pure-Rust statistical test suite for pseudorandom number generators (NIST SP 800-22, DIEHARD, DIEHARDER)."
license     = "BSD-2-Clause"
authors     = ["Darrell Long"]
repository  = "https://github.com/darrelllong/entropy"
readme      = "README.md"
documentation = "https://docs.rs/entropy-rs"
keywords    = ["randomness", "statistics", "rng", "diehard", "nist"]
categories  = ["cryptography", "algorithms"]
default-run = "run_tests"
exclude = [
    "assets/**",
    "scripts/**",
    "stats/**",
    "target/**",
    "pubs/**",
    ".claude/**",
    ".codex/**",
    "pilot_result_*/**",
    "CLAUDE.md",
    "AGENTS.md",
]

[[bin]]
name = "run_tests"
path = "src/main.rs"

[[bin]]
name = "bench_rngs"
path = "src/bench_rngs.rs"

[lib]
name = "entropy"
path = "src/lib.rs"

[dependencies]
cryptography-rs = "0.5"
rustfft         = "6.2"
